overflow fixed

--- a/src/scss/global/boilerplate.scss
+++ b/src/scss/global/boilerplate.scss
@@ -12,5 +12,4 @@ html {
 body {
   font-family: var(--dosis);
   padding-top: 5px;
-  overflow-x: hidden;
 }
